# arduino-weather

./: .gitignore  README.md  arduino-weather.ino  pyproject.toml  sketch.json  weather.ccp
arduino_weather/: __main__.py
