[tool.poetry]
name = "arduino_weather"
version = "0.1.0"
description = ""
authors = ["Max Wittig <max.wittig@siemens.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyserial = "^3.5"
pytz = "^2022.2.1"
pyowm = "^3.3.0"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
